--- a/src/shared/styles/colors.css
+++ b/src/shared/styles/colors.css
@@ -11,8 +11,6 @@
 
     /* to delete */
     --color-armadillo: #4b453d;
-    --color-mineral-green: #334a43;
-    --color-tan: #d4b58b;
     --color-ocean-green: #44b880;
     --color-dune: #2c2823;
     --color-monza: #d0021b;
